--- a/index.html
+++ b/index.html
@@ -7,53 +7,61 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css" />
     <style>
       body {
-        background: #121212;
-        color: #e0e0e0;
+        background: #ffffff;
+        color: #1a1a1a;
         font-family: 'Inter', sans-serif;
         line-height: 1.6;
         margin: 0;
         padding: 0;
       }
-      a {
-        color: #66ccff;
-      }
+
       .markdown-section {
         padding: 2rem;
+        max-width: 900px;
+        margin: auto;
       }
+
       .markdown-section h1, h2, h3 {
-        color: #ffffff;
+        color: #202020;
       }
+
       .markdown-section code {
-        background: rgba(255, 255, 255, 0.05);
+        background: rgba(0, 0, 0, 0.05);
         padding: 0.2em 0.4em;
         border-radius: 4px;
         font-size: 90%;
       }
+
       .markdown-section pre code {
         display: block;
-        background: #1e1e1e;
+        background: #f5f5f5;
         padding: 1rem;
         overflow-x: auto;
         border-radius: 4px;
       }
+
       details {
-        background: rgba(255,255,255,0.04);
+        background: #f7f9fa;
         padding: 1rem;
+        border: 1px solid #ddd;
         border-radius: 6px;
         margin-bottom: 1.5rem;
       }
+
       summary {
         font-weight: 600;
         cursor: pointer;
       }
+
       nav {
-        background: #1a1a1a;
+        background: #f0f2f5;
         padding: 1rem;
         text-align: center;
-        border-bottom: 1px solid #333;
+        border-bottom: 1px solid #ccc;
       }
+
       nav a {
-        color: #66ccff;
+        color: #0078d4;
         margin: 0 1rem;
         text-decoration: none;
         font-weight: 600;
