--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Upwind CTF</title>
+    <title>Upwind Capture The Flag</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css" />
     <style>
@@ -77,6 +77,7 @@
         loadSidebar: false,
         loadNavbar: false,
         coverpage: false,
+        subMaxLevel: 2,        // <- enables H2 & H3 navigation
         auto2top: true
       };
     </script>
